--- a/src/qt/forms/optionsdialog.ui
+++ b/src/qt/forms/optionsdialog.ui
@@ -79,10 +79,10 @@
        <item>
         <widget class="QCheckBox" name="bitcoinAtStartup">
          <property name="toolTip">
-          <string>Automatically start linkcoin after logging in to the system.</string>
+          <string>Automatically start blinecoin after logging in to the system.</string>
          </property>
          <property name="text">
-          <string>&amp;Start linkcoin on system login</string>
+          <string>&amp;Start blinecoin on system login</string>
          </property>
         </widget>
        </item>
@@ -119,7 +119,7 @@
        <item>
         <widget class="QCheckBox" name="mapPortUpnp">
          <property name="toolTip">
-          <string>Automatically open the linkcoin client port on the router. This only works when your router supports UPnP and it is enabled.</string>
+          <string>Automatically open the blinecoin client port on the router. This only works when your router supports UPnP and it is enabled.</string>
          </property>
          <property name="text">
           <string>Map port using &amp;UPnP</string>
@@ -129,7 +129,7 @@
        <item>
         <widget class="QCheckBox" name="connectSocks">
          <property name="toolTip">
-          <string>Connect to the linkcoin network through a SOCKS proxy (e.g. when connecting through Tor).</string>
+          <string>Connect to the blinecoin network through a SOCKS proxy (e.g. when connecting through Tor).</string>
          </property>
          <property name="text">
           <string>&amp;Connect through SOCKS proxy:</string>
@@ -303,7 +303,7 @@
          <item>
           <widget class="QValueComboBox" name="lang">
            <property name="toolTip">
-            <string>The user interface language can be set here. This setting will take effect after restarting linkcoin.</string>
+            <string>The user interface language can be set here. This setting will take effect after restarting blinecoin.</string>
            </property>
           </widget>
          </item>
@@ -336,7 +336,7 @@
        <item>
         <widget class="QCheckBox" name="displayAddresses">
          <property name="toolTip">
-          <string>Whether to show linkcoin addresses in the transaction list or not.</string>
+          <string>Whether to show blinecoin addresses in the transaction list or not.</string>
          </property>
          <property name="text">
           <string>&amp;Display addresses in transaction list</string>
